--- a/public/html/home.html
+++ b/public/html/home.html
@@ -1,5 +1,20 @@
 <div class="container-fluid">
-  <div class="col-xs-12">
-    <h1>Home</h1>
+  <div class="row">
+    <div class="col-xs-12 noBorPad text-center">
+      <div class="header">
+          <h1 class="homeHeader">The world's next auction website.</h1>
+          <a>Why is it different?</a>
+      </div>
+    </div>
+    <div class="col-xs-12 noBorPad">
+      <h3 class="finSoon">Finishing soon:</h3>
+    </div>
+    <div class="col-xs-12 noBorPad text-center">
+      <div class="row homeLoading">
+        <span us-spinner="{radius:20, width:8, length: 16}"></span>
+        Loading auctions...
+      </div>
+      <!-- <i class="fa fa-spinner homeLoading" aria-hidden="true"></i> -->
+    </div>
   </div>
 </div>
