--- a/public/index.html
+++ b/public/index.html
@@ -5,18 +5,40 @@
   <title>MEAN template</title>
 
   <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.min.css">
+  <link href='https://fonts.googleapis.com/css?family=Raleway:400,800' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="/bower_components/font-awesome/css/font-awesome.min.css">
   <link rel="stylesheet" href="css/style.css">
 
   <script src="/bower_components/angular/angular.min.js"></script>
   <script src="/bower_components/angular-bootstrap/ui-bootstrap.min.js"></script>
   <script src="/bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
+  <script src="/bower_components/spin.js/spin.js"></script>
+  <script src="/bower_components/angular-spinner/angular-spinner.js"></script>
 
   <script src="/js/module.js"></script>
   <script src="/js/controllers.js"></script>
   <script src="/js/services.js"></script>
 </head>
 <body ng-app="myApp">
-  <h1>MyApp</h1>
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-xs-12 noBorPad">
+        <div class="topBar">
+          <div class="row">
+            <div class="col-xs-6">
+              <a ui-sref="home" class="topBarLogo">AUCTIONS</a>
+              <a class="topBarLink">Auctions</a>
+              <a class="topBarLink">My Profile</a>
+            </div>
+            <div class="col-xs-6 text-right">
+              <button class="topBarButton logIn">LOG IN</button>
+              <button class="topBarButton register">REGISTER</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
   <ui-view></ui-view>
 </body>
 </html>
