login, logout, profilepage setup on front-end

--- a/public/index.html
+++ b/public/index.html
@@ -14,12 +14,13 @@
   <script src="/bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
   <script src="/bower_components/spin.js/spin.js"></script>
   <script src="/bower_components/angular-spinner/angular-spinner.js"></script>
+  <script src="/bower_components/ngstorage/ngStorage.js"></script>
 
   <script src="/js/module.js"></script>
   <script src="/js/controllers.js"></script>
   <script src="/js/services.js"></script>
 </head>
-<body ng-app="myApp">
+<body ng-app="auctionApp" ng-controller="mainCtrl">
   <div class="container-fluid">
     <div class="row">
       <div class="col-xs-12 noBorPad">
@@ -31,8 +32,9 @@
               <a class="topBarLink">My Profile</a>
             </div>
             <div class="col-xs-6 text-right">
-              <button class="topBarButton logIn">LOG IN</button>
-              <button class="topBarButton register">REGISTER</button>
+              <a ng-if="!isLoggedIn" class="topBarButton logIn" ui-sref="login">LOG IN</a>
+              <a ng-if="!isLoggedIn" class="topBarButton register">REGISTER</a>
+              <a ng-if="isLoggedIn" class="topBarButton logIn" ng-click="logOut()">Log Out</a>
             </div>
           </div>
         </div>
