--- a/public/html/auctions.html
+++ b/public/html/auctions.html
@@ -1,24 +1,14 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col-xs-12">
-      <h2>My Profile</h2>
+      <h3>Current Auctions:</h3>
     </div>
     <div class="col-xs-12">
-      <div class="well">
-        <div class="row profileItem1">
-          <b>E-mail:</b> {{ profile.email }}
-        </div>
-        <div class="row profileItem">
-          <b>Password:</b> 🔒 - <a>Change password</a>
-        </div>
-      </div>
-    </div>
-    <div class="col-xs-12">
-      <h3>My Auctions:</h3>
+      <button class="btn btn-sm btn-primary addNewAuction" ng-click="newAuction()"> + Add new auction</button>
     </div>
     <div class="col-xs-12">
       <div class="row">
-        <div class="col-xs-3" ng-repeat="auction in profile.auctions">
+        <div class="col-xs-3" ng-repeat="auction in auctions track by $index">
           <div class="panel panel-default">
             <div class="panel-heading">{{ auction.title }}</div>
             <div class="panel-body">
@@ -27,13 +17,15 @@
               </div>
               <div class="row auctionPanelContent">
                 <div class="col-xs-12">
+                  Remaning Time:<br>
+                  <span style="color:#EE585D">{{ auction.endTime - currentDate | date:'H:mm:ss' }}</span>
                 </div>
                 <div class="col-xs-6 highestBidLabel">
                   Highest Bid:<br>
                   <span style="color:#1DBB9B">{{ auction.bids[(auction.bids.length) - 1].value | currency }}</span>
                 </div>
                 <div class="col-xs-6 highestBidLabel text-right">
-                  <button class="btn btn-sm btn-primary openDetails">Open details</button>
+                  <button class="btn btn-sm btn-primary openDetails" ng-click="openAuction(auction._id)">Open details</button>
                 </div>
               </div>
             </div>
