--- a/public/html/login.html
+++ b/public/html/login.html
@@ -10,13 +10,13 @@
             <div class="form-group">
               <label class="control-label col-sm-2" for="email">Email:</label>
               <div class="col-sm-10">
-                <input type="email" class="form-control" id="email" placeholder="Enter email" ng-model="credentials.email">
+                <input type="email" class="form-control" id="email" placeholder="Enter email" ng-model="credentials.email" required>
               </div>
             </div>
             <div class="form-group">
               <label class="control-label col-sm-2" for="pwd">Password:</label>
               <div class="col-sm-10">
-                <input type="password" class="form-control" id="pwd" placeholder="Enter password" ng-model="credentials.password">
+                <input type="password" class="form-control" id="pwd" placeholder="Enter password" ng-model="credentials.password" required>
               </div>
             </div>
             <div class="form-group">
