--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
   <script src="/bower_components/angular-spinner/angular-spinner.js"></script>
   <script src="/bower_components/ngstorage/ngStorage.js"></script>
   <script src="/bower_components/angular-route/angular-route.js"></script>
+  <script src="/bower_components/moment/moment.js"></script>
 
   <script src="/js/module.js"></script>
   <script src="/js/controllers.js"></script>
