--- a/public/html/home.html
+++ b/public/html/home.html
@@ -10,9 +10,34 @@
       <h3 class="finSoon">Finishing soon:</h3>
     </div>
     <div class="col-xs-12 noBorPad text-center">
-      <div class="row homeLoading">
+      <div class="row homeLoading" ng-if="loading">
         <span us-spinner="{radius:20, width:8, length: 16}"></span>
         Loading auctions...
+      </div>
+      <div class="col-xs-12" ng-if="!loading">
+        <div class="row">
+          <div class="col-xs-3" ng-repeat="auction in auctions track by $index">
+            <div class="panel panel-default" ng-click="goToLogIn()">
+              <div class="panel-heading">{{ auction.title }}</div>
+              <div class="panel-body">
+                <div class="row text-center">
+                  <img ng-src="{{ auction.imgUrl }}" class="auctionImg">
+                </div>
+                <div class="row auctionPanelContent">
+                  <div class="col-xs-12">
+                  </div>
+                  <div class="col-xs-6 highestBidLabel">
+                    Highest Bid:<br>
+                    <span style="color:#1DBB9B">{{ auction.bids[(auction.bids.length) - 1].value | currency }}</span>
+                  </div>
+                  <div class="col-xs-6 highestBidLabel text-right">
+                    <button class="btn btn-sm btn-primary openDetails" ng-click="goToLogIn()">Open details</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
