--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
   <script src="/bower_components/ngstorage/ngStorage.js"></script>
   <script src="/bower_components/angular-route/angular-route.js"></script>
   <script src="/bower_components/moment/moment.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.13.0/moment.min.js"></script>
 
   <script src="/js/module.js"></script>
   <script src="/js/controllers.js"></script>
