--- a/public/html/auction.html
+++ b/public/html/auction.html
@@ -44,7 +44,7 @@
         <div class="row profileItem" ng-if="!auction.isFinished">
             <b>Images:</b>
           <div class="row">
-            <img ng-src="{{auction.imgUrl}}" alt="" class="auctionImg">
+            <img ng-src="{{auction.imgUrl}}" alt="" class="auctionImg addMarginToImg">
           </div>
         </div>
         <div class="row profileItem" ng-if="auction.isFinished">
