--- a/public/html/profile.html
+++ b/public/html/profile.html
@@ -27,6 +27,7 @@
               </div>
               <div class="row auctionPanelContent">
                 <div class="col-xs-12">
+                  <span ng-if="auction.isFinished" style="color:#1DBB9B">ENDED</span>
                 </div>
                 <div class="col-xs-6 highestBidLabel">
                   Highest Bid:<br>
